Update project with latest features and documentation